--- a/test.html
+++ b/test.html
@@ -3,153 +3,185 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ Section</title>
+    <title>Footer Section</title>
     <style>
         body {
     font-family: Arial, sans-serif;
-    background-color: #fff;
     margin: 0;
-    padding: 20px;
-    color: #333;
+    padding: 0;
 }
 
-.faq-container {
-    max-width: 600px;
-    margin: 0 auto;
+.footer {
+    background-color: #000;
+    color: #fff;
+    padding: 20px 0;
 }
 
-h2 {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-
-.faq-item {
-    border-bottom: 1px solid #e0e0e0;
-    padding: 15px 0;
-}
-
-.faq-question {
+.footer-container {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    cursor: pointer;
-    font-weight: bold;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
-.faq-question span {
-    font-size: 16px;
+.footer-logo {
+    max-width: 200px;
+    flex-shrink: 0;
 }
 
-.faq-toggle {
-    font-size: 20px;
+.footer-logo img {
+    width: 57px;
+    height: 66px;
+    margin-bottom: 10px;
 }
 
-.faq-answer {
-    display: none;
-    padding: 10px 0;
-    color: #666;
+.footer-links {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin-left: 20px;
+}
+
+.footer-column {
+    margin: 10px 20px;
+}
+
+.footer-column ul {
+    display: grid;
+    grid-template-columns: repeat(4,200px);
+    list-style: none;
+    padding: 0;
+}
+
+.footer-column ul li {
+    margin-bottom: 10px;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
     font-size: 14px;
 }
 
-.faq-answer p {
+.footer-column ul li a:hover {
+    text-decoration: underline;
+}
+
+.AlHabthoor-companyList ul{
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    column-gap: 21px;
+}
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.social-media ul {
+    list-style: none;
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.social-media ul li {
+    margin-right: 15px;
+}
+
+.social-media ul li a {
+    color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.footer-certificates img {
+    width: 60px;
+    height: auto;
+    margin-left: 10px;
+}
+
+.footer-bottom {
+    text-align: center;
+    padding: 15px 0;
+    border-top: 1px solid #444;
+    margin-top: 20px;
+}
+
+.footer-bottom p {
     margin: 0;
+    font-size: 14px;
 }
 
     </style>
 </head>
 <body>
-    <div class="faq-container">
-        <h2>Frequently asked questions</h2>
-        <!-- FAQ items will be dynamically inserted here by JavaScript -->
-    </div>
+    <!-- Other content of the page -->
 
-    <script>
-    document.addEventListener("DOMContentLoaded", function() {
-    const faqContainer = document.querySelector(".faq-container");
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <!-- Add your logo image here -->
+                <img src="./assets/photos/icons/footer-logo.svg" alt="Company Logo">
+                <p>Member of the Al Habtoor Group</p>
+            </div>
+            <div class="footer-links">
+                <div class="footer-column">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Offers</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Locations</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Term & Conditions</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Contact US</a></li>
+                        <li><a href="#">Service Request</a></li>
+                        
+                    </ul>
+                </div>
+                
+                <div class="AlHabthoor-companyList">
+                    <p>Al habtoor company List</p>
+                    <ul>
+                        <li><a href="#">Education</a></li>
+                        <li><a href="#">Publishing</a></li>
+                        <li><a href="#">Hospitality</a></li>
+                        <li><a href="#">Real Estate</a></li>
+                        <li><a href="#">Automotive</a></li>
+                        <li><a href="#">Vehicle Leasing</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-right">
+                <div class="social-media">
+                    <p>FOLLOW US ON</p>
+                    <ul>
+                        <li><a href="#"><img src="./assets/photos/icons/facebook-footer.svg" alt=""></i></a></li>
+                        <li><a href="#"><img src="./assets/photos/icons/x-footer.svg" alt=""></i></a></li>
+                        <li><a href="#"><img src="./assets/photos/icons/instagram-footer.svg" alt=""></i></a></li>
+                        <li><a href="#"><img src="./assets/photos/icons/linkdin-footer.svg" alt=""></a></li>
+                        <li><a href="#"><img src="./assets/photos/icons/youTube-footer.svg" alt=""></a></li>
+                    </ul>
+                </div>
+                <div class="footer-certificates">
+                    <!-- Add your certificate images here -->
+                    <img src="./assets/photos/icons/site-lock.svg" alt="Certificate 1">
+                    <img src="./assets/photos/icons/site-secure.svg" alt="Certificate 2">
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2018 Diamondlease LLC - All Rights Reserved.</p>
+        </div>
+    </footer>
 
-    // Sample data (You can fetch or generate this data dynamically)
-    const faqData = [
-        {
-            question: "What is my eligibility to book a car?",
-            answer: "You should be 18 years old above and you must possess a valid driving license."
-        },
-        {
-            question: "Can I book for any period of time?",
-            answer: "Yes, you can book a car for as long as you need."
-        },
-        {
-            question: "Can I opt for a longer period?",
-            answer: "Yes, longer booking periods are available with special rates."
-        },
-        {
-            question: "Can I book a one-way trip?",
-            answer: "One-way trips are available depending on the destination."
-        },
-        {
-            question: "Is there a home delivery option available?",
-            answer: "Yes, we offer home delivery services for car bookings."
-        },
-        {
-            question: "How can I make the payment?",
-            answer: "Payments can be made online via credit card, debit card, or other available options."
-        }
-    ];
-
-    // Function to create and append FAQ items
-    function addFaqItems(faqData) {
-        faqData.forEach(item => {
-            // Create elements for the FAQ item
-            const faqItem = document.createElement("div");
-            faqItem.classList.add("faq-item");
-
-            const faqQuestion = document.createElement("div");
-            faqQuestion.classList.add("faq-question");
-
-            const questionText = document.createElement("span");
-            questionText.textContent = item.question;
-
-            const faqToggle = document.createElement("span");
-            faqToggle.classList.add("faq-toggle");
-            faqToggle.textContent = "+";
-
-            const faqAnswer = document.createElement("div");
-            faqAnswer.classList.add("faq-answer");
-
-            const answerText = document.createElement("p");
-            answerText.textContent = item.answer;
-
-            // Append elements to the container
-            faqAnswer.appendChild(answerText);
-            faqQuestion.appendChild(questionText);
-            faqQuestion.appendChild(faqToggle);
-            faqItem.appendChild(faqQuestion);
-            faqItem.appendChild(faqAnswer);
-            faqContainer.appendChild(faqItem);
-
-            // Add toggle functionality
-            faqQuestion.addEventListener("click", function() {
-                const isOpen = faqAnswer.style.display === "block";
-
-                // Close all other answers
-                document.querySelectorAll(".faq-answer").forEach(answer => answer.style.display = "none");
-                document.querySelectorAll(".faq-toggle").forEach(toggle => toggle.textContent = "+");
-
-                // Toggle the current answer
-                if (isOpen) {
-                    faqAnswer.style.display = "none";
-                    faqToggle.textContent = "+";
-                } else {
-                    faqAnswer.style.display = "block";
-                    faqToggle.textContent = "×";
-                }
-            });
-        });
-    }
-
-    // Call the function with the FAQ data
-    addFaqItems(faqData);
-});
-
-    </script>
+    <!-- Include FontAwesome for social media icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
 </html>
