Compatable for width 1440px

--- a/index.html
+++ b/index.html
@@ -35,8 +35,16 @@
     </div>
 
     <!-- Slide in call button -->
-    <div class="slide-in-button">
-        <button><img src="./assets/photos/icons/phone.svg" alt=""></button>
+    <div class="slide-in-button-1" id="slide-in-button">
+        <button class="slide-in-contents">
+            <img src="./assets/photos/icons/phone.svg" alt=""><p>8562352452</p>
+        </button>
+    </div>
+
+    <div class="slide-in-button-2" id="slide-in-button">
+        <button class="slide-in-contents">
+            <img src="./assets/photos/icons/slide-logo.svg" alt=""><p>8562352452</p>
+        </button>
     </div>
 
     <!-- Hero section -->
