--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="shortcut icon" href="#">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
-    <title>Document</title>
+    <title>Diamondlease car rental</title>
 </head>
 <body>
+
+    <!-- top bar social links -->
     <div class="social-links">
         <a href="#"><img src="./assets/photos/icons/facebook.svg" alt=""></i></a>
         <a href="#"><img src="./assets/photos/icons/instagram.svg" alt=""></i></a>
         <a href="#"><img src="./assets/photos/icons/x.svg" alt=""></i></a>
         <a href="#"><img src="./assets/photos/icons/lindin.svg" alt=""></i></a>
     </div>
+
+    <!-- nav bar -->
     <nav>
         <div class="logo"><img src="./assets/photos/logo.svg" alt=""></div>
         <div class="nav-options">
