--- a/index.html
+++ b/index.html
@@ -466,4 +466,54 @@
 
     <script src="./assets/scripts/index.js" defer></script>
 </body>
+
+<!-- footer section for mobiel -->
+<div class="mobile-footer" style="display: none;">
+    <!-- footer section with light color -->
+    <div class="footer-half-color">
+        <div class="footer-heading">
+            <img src="./assets/photos/icons/mobile-footer-logo.svg" alt="">
+            <ul class="social-media-mobile">
+                <li><a href="#"><img src="./assets/photos/icons/facebook-inerted-color.svg" alt=""></a></li>
+                <li><a href="#"><img src="./assets/photos/icons/X-inverted-color.svg" alt=""></a></li>
+                <li><a href="#"><img src="./assets/photos/icons/instagram-inverted-color.svg" alt=""></a></li>
+                <li><a href="#"><img src="./assets/photos/icons/linkdiin-inverted-color.svg" alt=""></a></li>
+                <li><a href="#"><img src="./assets/photos/icons/youTube-inverted-color.svg" alt=""></a></li>
+            </ul>
+        </div>
+
+        <ul class="footer-nav-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Offers</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Career</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Locations</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact US</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Term & Conditions</a></li>
+            <li><a href="#">Service Request</a></li>
+        </ul>
+    </div>
+
+    <!-- footer section with dark color -->
+    <div class="black-color">
+        <h2 class="parent-company-heading">Al Habtoor Companies</h2>
+        <ul class="company-list-mobile">
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Publishing</a></li>
+            <li><a href="#">Hospitality</a></li>
+            <li><a href="#">Real Estate</a></li>
+            <li><a href="#">Automotive</a></li>
+            <li><a href="#">Vehicle Leasing</a></li>
+        </ul>
+        <img src="./assets/photos/icons/site-secure.svg" alt="">
+
+        <!-- footer licence section -->
+        <div class="footer-bottom">
+            <p>&copy; 2018 Diamondlease LLC - All Rights Reserved.</p>
+        </div>
+    </div>
+</div>
 </html>
