--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href=""><li>Personal</li></a>
                 <a href=""><li>Locations</li></a>
                 <a href=""><li>Contact Us</li></a>
-                <a href=""><li><div class="messages"><i class="ri-notification-2-fill bell"></i><div class="notification-count" id="notification-count"></div></div></li></a>
+                <a href="" class="messages"><li class="messages-li"><div class="messages"><i class="ri-notification-2-fill bell"></i><div class="notification-count" id="notification-count"></div></div></li></a>
                 <a href=""><li> <span class="profile"><div class="profile-pic">J</div>John Doe</span></li></a>
             </ul>
         </div>
